test: update user router testcase and refactor user router
